--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -254,7 +254,7 @@ textarea.textarea {
 
 .meta-date {
   display: inline-block;
-  font-size: 16px; }
+  font-size: 14px; }
   .meta-date i {
     padding-right: 5px;
     color: #0071bd; }
@@ -265,7 +265,13 @@ textarea.textarea {
   margin-bottom: 20px; }
   .author span {
     color: #4a4a4a;
-    font-weight: 400; }
+    font-weight: 400;
+    padding-right: 3px; }
+
+.meta-author a {
+  display: inline-block; }
+  .meta-author a span {
+    padding-right: 5px; }
 
 .social-link-vertical ul li, .social-link-horizontal ul li {
   display: block;
@@ -573,7 +579,8 @@ body.fixed-nav #header {
 .subscription-form input[type="email"]:focus,
 .subscription-form input[type="email"]:hover {
   outline: none;
-  box-shadow: none; }
+  box-shadow: none;
+  border: 1px solid #0071bd; }
 
 .contact-information {
   margin-top: 28px; }
@@ -846,6 +853,7 @@ p.spam-message {
   overflow: hidden;
   transition: 0.3s ease-in-out; }
   .single-blog-item:hover {
+    border-radius: 0 0 4px 4px;
     box-shadow: 0 8px 56px rgba(15, 80, 100, 0.16); }
     .single-blog-item:hover .blog-image {
       transform: scale(1.3); }
@@ -880,10 +888,11 @@ p.spam-message {
   .single-blog-item .blog-9 {
     background-image: url(/assets/images/blog-image/9.jpg); }
   .single-blog-item .single-blog-content {
-    padding: 20px 10px;
+    padding: 20px 20px;
     border: 1px solid #eaebf5;
     border-radius: 0 0 4px 4px;
-    border-top: transparent; }
+    border-top: transparent;
+    overflow: hidden; }
     .single-blog-item .single-blog-content .blog-meta {
       display: flex;
       justify-content: space-between;
@@ -1042,6 +1051,8 @@ figure figcaption {
     background-color: #1c2c41 !important;
     font-size: 14px;
     margin-bottom: 20px; }
+    .highlight pre code {
+      color: #f1f1f1; }
 
 .blog-content h2 {
   font-size: 36px;
