--- a/static/assets/sass/layouts/_blog-page.scss
+++ b/static/assets/sass/layouts/_blog-page.scss
@@ -161,8 +161,8 @@
   transition: 0.3s ease-in-out;
 
   &:hover {
+    border-radius: 0 0 4px 4px;
     box-shadow: 0 8px 56px rgba(15, 80, 100, 0.16);
-
     .blog-image {
       transform: scale(1.3);
     }
@@ -228,10 +228,11 @@
   }
 
   .single-blog-content {
-    padding: 20px 10px;
+    padding: 20px 20px;
     border: 1px solid #eaebf5;
     border-radius: 0 0 4px 4px;
     border-top: transparent;
+    overflow: hidden;
 
     .blog-meta {
       display: flex;
