download button icon add .

--- a/layouts/shortcodes/code.html
+++ b/layouts/shortcodes/code.html
@@ -5,7 +5,7 @@
       <h4>{{ .Get "title" }}</h4>
     </div>
     <div class="copy-and-download">
-      <button class="download-here"><i class="fa fa-download" aria-hidden="true"></i></button>
+      <button class="download-here"><img src="/assets/images/icons/download.svg" alt="copy-icon" title="Download"></button>
       <button class="copy-here" data-clipboard-target="#codeblock-{{.Ordinal}} pre code" title="Copy">
         <img src="/assets/images/icons/copy.svg" alt="copy-icon">
       </button>
