--- a/public/assets/sass/base/_global.scss
+++ b/public/assets/sass/base/_global.scss
@@ -274,7 +274,7 @@ textarea.textarea {
 //for blog
 .meta-date {
   display: inline-block;
-  font-size: 16px;
+  font-size: 14px;
   i {
     padding-right: 5px;
     color: $primary-color;
@@ -287,6 +287,15 @@ textarea.textarea {
   span {
     color: $paragraph-color;
     font-weight: 400;
+    padding-right: 3px;
+  }
+}
+.meta-author{
+  a{
+    display: inline-block;
+    span{
+      padding-right: 5px;
+    }
   }
 }
 //vertical social link style
