--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -1050,7 +1050,8 @@ figure figcaption {
   .highlight pre {
     background-color: #1c2c41 !important;
     font-size: 14px;
-    margin-bottom: 20px; }
+    margin-bottom: 20px;
+    border-radius: 0 0 4px 4px; }
     .highlight pre code {
       color: #f1f1f1; }
 
