--- a/public/assets/sass/layouts/_blog-details.scss
+++ b/public/assets/sass/layouts/_blog-details.scss
@@ -59,6 +59,7 @@ figure {
     background-color: #1c2c41 !important;
     font-size: 14px;
     margin-bottom: 20px;
+    border-radius: 0 0 4px 4px;
     code{
       color: #f1f1f1;
     }
