--- a/layouts/shortcodes/code.html
+++ b/layouts/shortcodes/code.html
@@ -5,9 +5,9 @@
       <h4>{{ .Get "title" }}</h4>
     </div>
     <div class="copy-and-download">
-      <button class="download-here"><i class="fa fa-download" aria-hidden="true"></i></button>
+      <button class="download-here"><i class="fa fa-download" aria-hidden="true" title="Download"></i></button>
       <button class="copy-here" data-clipboard-target="#codeblock-{{.Ordinal}} pre code" title="Copy">
-        <img src="/assets/images/icons/copy.svg" alt="copy-icon">
+        <i class="fa fa-clipboard" aria-hidden="true"></i>
       </button>
     </div>
   </div>
