--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -30,10 +30,10 @@
   <!-- bulma css  -->
   <link rel="stylesheet" href="/assets/css/bulma.min.css" />
   <!-- Custom CSS -->
-  {{ with $style := resources.Get "/assets/sass/main.scss" | resources.ToCSS | resources.PostCSS | resources.Minify }}
+  <!-- {{ with $style := resources.Get "/assets/sass/main.scss" | resources.ToCSS | resources.PostCSS | resources.Minify }}
   <link rel="stylesheet" href="{{ $style.RelPermalink }}" />
-  {{ end }}
-  <!-- <link rel="stylesheet" href="/assets/css/style.css" /> -->
+  {{ end }} -->
+  <link rel="stylesheet" href="/assets/css/style.css" />
 </head>
 
 <body>
@@ -125,7 +125,7 @@
           </div>
           <div class="cta-buttons buttons">
               <a href="{{.Site.Params.domain_bytebuilders}}/user/sign_up" class="button is-primary is-large">Get started free</a>
-              <a href="{{.Site.Params.domain_appscode}}/meet-expert/" class="button is-large">Get a Demo</a>
+              <a href="{{.Site.Params.domain_appscode}}/meet-expert/" class="button is-large is-white-hoverable">Get a Demo</a>
             </div>
         </div>
         <div class="column is-4 is-offset-3">
