--- a/static/assets/sass/base/_global.scss
+++ b/static/assets/sass/base/_global.scss
@@ -147,6 +147,11 @@ h6 {
   font-size: 16px;
   padding: 27px 60px;
 }
+.button.is-white-hoverable{
+  &:hover{
+    background-color: scale-color($primary-color, $lightness: 90%)
+  }
+}
 .button.is-medium {
   padding: 24px 65px;
   font-size: 16px;
@@ -437,7 +442,7 @@ textarea.textarea {
 @media (min-width: 1024px) and (max-width: 1215px) {
   .button.is-large {
     font-size: 16px;
-    padding: 27px 50px;
+    padding: 27px 35px;
   }
 }
 /**************************************************************** 
