--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -133,6 +133,9 @@ h6 {
   font-size: 16px;
   padding: 27px 60px; }
 
+.button.is-white-hoverable:hover {
+  background-color: #dff2ff; }
+
 .button.is-medium {
   padding: 24px 65px;
   font-size: 16px; }
@@ -374,7 +377,7 @@ textarea.textarea {
 @media (min-width: 1024px) and (max-width: 1215px) {
   .button.is-large {
     font-size: 16px;
-    padding: 27px 50px; } }
+    padding: 27px 35px; } }
 /**************************************************************** 
                   Tablet Between 769px and 1023px
 **************************************************************** */
@@ -779,12 +782,12 @@ p.spam-message {
       .blog-hero-area .blog-slider-wrapper .blog-slider-inner .single-blog .blog-content-wrapper .blog-content-inner {
         padding-right: 50px; }
         .blog-hero-area .blog-slider-wrapper .blog-slider-inner .single-blog .blog-content-wrapper .blog-content-inner .meta-date {
-          margin-bottom: 10px; }
+          margin-bottom: 6px; }
         .blog-hero-area .blog-slider-wrapper .blog-slider-inner .single-blog .blog-content-wrapper .blog-content-inner h1 {
           display: block;
           font-size: 48px;
           line-height: 60px;
-          margin-bottom: 10px; }
+          margin-bottom: 7px; }
         .blog-hero-area .blog-slider-wrapper .blog-slider-inner .single-blog .blog-content-wrapper .blog-content-inner .description {
           line-height: 26px;
           margin-bottom: 20px;
@@ -854,7 +857,7 @@ p.spam-message {
   transition: 0.3s ease-in-out; }
   .single-blog-item:hover {
     border-radius: 0 0 4px 4px;
-    box-shadow: 0 8px 56px rgba(15, 80, 100, 0.16); }
+    box-shadow: 0 2px 3px rgba(15, 80, 100, 0.16); }
     .single-blog-item:hover .blog-image {
       transform: scale(1.3); }
     .single-blog-item:hover .blog-description h2 a {
