typography fix blog-page and cta-area (#10)

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -125,7 +125,7 @@
           </div>
           <div class="cta-buttons buttons">
               <a href="{{.Site.Params.domain_bytebuilders}}/user/sign_up" class="button is-primary is-large">Get started free</a>
-              <a href="{{.Site.Params.domain_appscode}}/meet-expert/" class="button is-large">Get a Demo</a>
+              <a href="{{.Site.Params.domain_appscode}}/meet-expert/" class="button is-large is-white-hoverable">Get a Demo</a>
             </div>
         </div>
         <div class="column is-4 is-offset-3">
