image formate changes

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -178,7 +178,7 @@
                     id="mc-embedded-subscribe-form"
                     name="mc-embedded-subscribe-form"
                     class="navbar-form"
-                    target="_blank"
+                    target="_blank" rel="noopener"
                     novalidate=""
                     role="email"
                   >
