--- a/public/assets/sass/layouts/_blog-page.scss
+++ b/public/assets/sass/layouts/_blog-page.scss
@@ -95,13 +95,13 @@
   }
 }
 .blog-bg-1 {
-  background-image: url(/assets/images/slider-image/s-1.jpg);
+  background-image: url(/assets/images/slider-image/s-1.webp);
 }
 .blog-bg-2 {
-  background-image: url(/assets/images/slider-image/s-2.jpg);
+  background-image: url(/assets/images/slider-image/s-2.webp);
 }
 .blog-bg-3 {
-  background-image: url(/assets/images/slider-image/s-3.jpg);
+  background-image: url(/assets/images/slider-image/s-3.webp);
 }
 
 //blog body start
