Add bpf-opa blog post

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -18,7 +18,9 @@
 
         <!-- blog large image start -->
         <figure>
-          <img src="{{ ( .Resources.GetMatch "hero.jpg").RelPermalink }}" alt="">
+          {{ $original := .Resources.GetMatch "hero.jpg" }}
+          {{ $cropped := $original.Fill "1408x690" }}
+          <img src="{{ $cropped.RelPermalink }}" alt="">
           <!-- <figcaption>capture operational knowledge in a software form</figcaption> -->
           </a>
         </figure>
