--- a/static/assets/sass/base/_global.scss
+++ b/static/assets/sass/base/_global.scss
@@ -285,6 +285,10 @@ textarea.textarea {
     color: $primary-color;
   }
 }
+.blog-heading {
+  max-width: 70%;
+  margin: 0 auto;
+}
 .author {
   font-weight: 500;
   color: $primary-color;
