--- a/static/assets/sass/layouts/_blog-page.scss
+++ b/static/assets/sass/layouts/_blog-page.scss
@@ -191,41 +191,41 @@
   }
 
   //blog image start
-  .blog-1 {
-    background-image: url(/assets/images/blog-image/1.jpg);
-  }
+  // .blog-1 {
+  //   background-image: url(/assets/images/blog-image/1.jpg);
+  // }
 
-  .blog-2 {
-    background-image: url(/assets/images/blog-image/2.jpg);
-  }
+  // .blog-2 {
+  //   background-image: url(/assets/images/blog-image/2.jpg);
+  // }
 
-  .blog-3 {
-    background-image: url(/assets/images/blog-image/3.jpg);
-  }
+  // .blog-3 {
+  //   background-image: url(/assets/images/blog-image/3.jpg);
+  // }
 
-  .blog-4 {
-    background-image: url(/assets/images/blog-image/4.jpg);
-  }
+  // .blog-4 {
+  //   background-image: url(/assets/images/blog-image/4.jpg);
+  // }
 
-  .blog-5 {
-    background-image: url(/assets/images/blog-image/5.jpg);
-  }
+  // .blog-5 {
+  //   background-image: url(/assets/images/blog-image/5.jpg);
+  // }
 
-  .blog-6 {
-    background-image: url(/assets/images/blog-image/6.jpg);
-  }
+  // .blog-6 {
+  //   background-image: url(/assets/images/blog-image/6.jpg);
+  // }
 
-  .blog-7 {
-    background-image: url(/assets/images/blog-image/7.jpg);
-  }
+  // .blog-7 {
+  //   background-image: url(/assets/images/blog-image/7.jpg);
+  // }
 
-  .blog-8 {
-    background-image: url(/assets/images/blog-image/8.jpg);
-  }
+  // .blog-8 {
+  //   background-image: url(/assets/images/blog-image/8.jpg);
+  // }
 
-  .blog-9 {
-    background-image: url(/assets/images/blog-image/9.jpg);
-  }
+  // .blog-9 {
+  //   background-image: url(/assets/images/blog-image/9.jpg);
+  // }
 
   .single-blog-content {
     padding: 20px 20px;
@@ -250,7 +250,7 @@
       .meta-author {
         a {
           font-weight: 500;
-
+          text-align: right;
           span {
             color: $paragraph-color;
             font-weight: 400;
