--- a/layouts/author/list.html
+++ b/layouts/author/list.html
@@ -9,7 +9,7 @@
       <div class="column is-8 is-offset-2 has-text-centered">
         <div class="author-content">
           <figure class="image">
-            <img class="is-rounded" src="{{ $author.profile }}">
+            <img src="{{ $author.profile }}">
           </figure>
           <h3>{{ $author.name }}</h3>
           <p>{{ $author.biography }}</p>
