--- a/static/assets/sass/layouts/_author.scss
+++ b/static/assets/sass/layouts/_author.scss
@@ -7,6 +7,12 @@
     width: 165px;
     height: 165px;
     margin: 0 auto;
+    border-radius: 50%;
+    overflow: hidden;
+    img{
+      height: 100%;
+      width: 100%;
+    }
   }
   p {
     font-size: 16px;
@@ -17,7 +23,6 @@
     margin-bottom: 20px;
   }
 }
-
 
 /*=================================================================================================
                                     Responsive code start
@@ -55,7 +60,7 @@
     .image {
       margin-bottom: 20px;
     }
-    h3{
+    h3 {
       margin-bottom: 10px;
     }
   }
