--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -121,7 +121,9 @@
           <div class="column is-one-third-fullhd is-half-tablet is-one-third-desktop">
             <div class="single-blog-item">
               <div class="blog-image-wrapper">
-                <a href="{{ $p.RelPermalink }}" class="blog-image blog-1" style="background-image: url(/assets/images/blog-image/2.jpg);"></a>
+                {{ $original := $p.Resources.GetMatch "hero.jpg" }}
+                {{ $cropped := $original.Fill "328x234" }}
+                <a href="{{ $p.RelPermalink }}" class="blog-image blog-1" style="background-image: url({{ $cropped.RelPermalink }});"></a>
               </div>
               <div class="single-blog-content">
                 <div class="blog-meta">
