--- a/static/assets/sass/layouts/_blog-details.scss
+++ b/static/assets/sass/layouts/_blog-details.scss
@@ -187,6 +187,13 @@
       padding: 5px 20px;
     }
   }
+  .tab-content {
+    h2 {
+      margin-top: 0;
+      font-size: 28px;
+      line-height: 40px;
+    }
+  }
 }
 
 /*=================================================================================================
