--- a/static/assets/sass/main.scss
+++ b/static/assets/sass/main.scss
@@ -12,6 +12,7 @@
 
 @import "components/_cta-area";
 @import "components/_footer";
+@import "components/_tabs-style";
 @import "components/_go-to-top";
 
 //LAYOUTS - Page layout styles
