block-quote and quote style add (#15)
* blockquote and quote style add

* comment out quote

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -64,6 +64,13 @@
       <div class="column is-8">
         <!-- blog-content start  -->
         <div class="blog-content">
+          <!--
+          <div class="bb-quote-msg">
+            <div class="quote-icon"><img src="/assets/images/icons/quote.svg" alt="quote.svg"></div>
+             <p> Make sure that you’re running a linux machine with kernel version 4.17 or higher. We’re attaching eBPF programs to raw_tracepoints, and this feature is available from linux kernel 4.17. For more information, you can see here.</p>
+             <div class="name-descriptor">Tomas Albart, <span>Product designer at <a href="#" class="inline-button">AWS</a></span></div>
+          </div>
+          -->
 
           {{ .Content }}
 
