fix blog page responsive design

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -158,8 +158,8 @@
     <!-- footer top start  -->
     <div class="footer-top">
       <div class="container section">
-        <div class="columns">
-          <div class="column is-4">
+        <div class="columns is-mobile is-multiline">
+          <div class="column is-full-mobile is-one-third-desktop is-one-third-widescreen is-one-third-tablet">
             <div class="single-footer-widget">
               <div class="footer-logo">
                 <a href="{{.Site.Params.domain_appscode}}">
@@ -236,7 +236,7 @@
             </div>
           </div>
           <!-- subscription area end  -->
-          <div class="column is-2">
+          <div class="column is-half-mobile">
             <div class="single-footer-widget">
               <div class="footer-menu">
                 <h4>Products</h4>
@@ -250,7 +250,7 @@
             </div>
           </div>
 
-          <div class="column is-2">
+          <div class="column is-half-mobile">
             <div class="single-footer-widget">
               <div class="footer-menu">
                 <h4>Services</h4>
@@ -263,7 +263,7 @@
             </div>
           </div>
 
-          <div class="column is-2">
+          <div class="column is-half-mobile">
             <div class="single-footer-widget">
               <div class="footer-menu">
                 <h4>Company</h4>
@@ -276,7 +276,7 @@
             </div>
           </div>
 
-          <div class="column is-2">
+          <div class="column is-half-mobile">
             <div class="single-footer-widget">
               <div class="footer-menu">
                 <h4>Legal</h4>
